# ChessBot

./: CMakeLists.txt  README.md
include/: Coord.hpp  Coup.hpp  CoupLegaux.hpp  Echiquier.hpp  Evaluation.hpp  Piece.hpp
source/: CoupLegaux.cpp  Echiquier.cpp  Evaluation.cpp  main.cpp
